--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 hint: 'dd month yyyy'
             },
             {
-                question: 'Civitas UGM non-mahasiswa yang kamu sohib bet annjay (katanya)?',
-                answer: 'satpam',
-                hint: ''
+                question: 'Tempat yang gabakalan kamu datengin di ugm🗿',
+                answer: 'perpustakaan',
+                hint: 'jawab dengan 1 kata penuh'
             },
             {
                 question: 'Dimana tempat pertama kita ketemu?',
@@ -159,7 +159,7 @@
                 alert("jawaban salah, ulangi lagi ya sayang");
                 attempts++;
 
-                if (attempts >= 5) {
+                if (attempts >= 20) {
                     document.getElementById('hint').style.display = 'block';
                     document.getElementById('hintText').textContent = questions[currentQuestion].hint;
                 }
